<resources>
    <string name="app_name">Github Users</string>
    <string name="username">username</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="repositories">repos</string>
    <string name="github_label">Github</string>
    <string name="github_url">https://www.github.com/albarranaufala</string>
    <string name="search_user">Search user</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="change_language">Change Language</string>
    <string name="not_found">Username not found</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_success">Add to favorite success</string>
    <string name="favorite_failed">Add to favorite failed</string>
    <string name="remove_favorite_success">Remove from favorite success</string>
    <string name="remove_favorite_failed">Remove from favorite failed</string>
    <string name="favorite_empty">Your favorites list is empty</string>
    <string name="reminder" translatable="false">reminder</string>
    <string name="language" translatable="false">language</string>
    <string name="reminder_title">Reminder</string>
    <string name="reminder_label">Let\'s find populer users on Github!</string>
    <string name="reminder_9am">Reminder at 9.00 AM</string>
    <string name="reminder_9am_summary">You will receive a notification from us</string>
    <string name="reminder_on">Reminder on</string>
    <string name="reminder_off">Reminder off</string>
    <string name="language_summary">English</string>
    <string name="setting">Settings</string>
</resources>